--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,1 +1,5 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>myGroup</td><td>Groupings.passingGroup()[pri:5, instance:Practicing_TestNG.Groupings@79e2c065]<br/></td></tr>
+<tr><td>regression</td><td>Groupings.passingDependentMethod()[pri:4, instance:Practicing_TestNG.Groupings@79e2c065]<br/>Groupings.dummyMethod2()[pri:3, instance:Practicing_TestNG.Groupings@79e2c065]<br/>Groupings.group4()[pri:1, instance:Practicing_TestNG.Groupings@79e2c065]<br/>Groupings.passingDependentGroup()[pri:6, instance:Practicing_TestNG.Groupings@79e2c065]<br/>Groupings.group2()[pri:0, instance:Practicing_TestNG.Groupings@79e2c065]<br/></td></tr>
+<tr><td>smoke</td><td>Groupings.group3()[pri:0, instance:Practicing_TestNG.Groupings@79e2c065]<br/>Groupings.failingDependentMethod()[pri:0, instance:Practicing_TestNG.Groupings@79e2c065]<br/>Groupings.group1()[pri:0, instance:Practicing_TestNG.Groupings@79e2c065]<br/>Groupings.dummyMethod()[pri:0, instance:Practicing_TestNG.Groupings@79e2c065]<br/></td></tr>
+</table>
