--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,23 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,123</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">9</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">68</td><td>regression, smoke, myGroup</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">mvnTest.testNG.maven</td><td><a href="#m0">first</a></td><td rowspan="1">1713943995442</td><td rowspan="1">5087</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Practicing_TestNG.Groupings</td><td><a href="#m0">dummyMethod</a></td><td rowspan="1">1754202593039</td><td rowspan="1">10</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="9">Practicing_TestNG.Groupings</td><td><a href="#m1">dummyMethod2</a></td><td rowspan="1">1754202593069</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m2">failingDependentMethod</a></td><td rowspan="1">1754202593055</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m3">group1</a></td><td rowspan="1">1754202593057</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m4">group2</a></td><td rowspan="1">1754202593061</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m5">group3</a></td><td rowspan="1">1754202593064</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m6">group4</a></td><td rowspan="1">1754202593067</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m7">passingDependentGroup</a></td><td rowspan="1">1754202593079</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m8">passingDependentMethod</a></td><td rowspan="1">1754202593071</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m9">passingGroup</a></td><td rowspan="1">1754202593074</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">mvnTest.testNG.maven#first</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">Practicing_TestNG.Groupings#dummyMethod</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.ArithmeticException: / by zero
+	at Practicing_TestNG.Groupings.dummyMethod(Groupings.java:32)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Practicing_TestNG.Groupings#dummyMethod2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Practicing_TestNG.Groupings#failingDependentMethod</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Practicing_TestNG.Groupings#group1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">Practicing_TestNG.Groupings#group2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">Practicing_TestNG.Groupings#group3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">Practicing_TestNG.Groupings#group4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">Practicing_TestNG.Groupings#passingDependentGroup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">Practicing_TestNG.Groupings#passingDependentMethod</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">Practicing_TestNG.Groupings#passingGroup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
