--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6decaa">  <td>24/04/24 13:03:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="maven.first()[pri:0, instance:mvnTest.testNG.maven@72d1ad2e]">first</td> 
+<tr bgcolor="6decaa">  <td>25/08/03 11:52:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groupings.dummyMethod()[pri:0, instance:Practicing_TestNG.Groupings@79e2c065]">dummyMethod</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>25/08/03 11:52:35</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groupings.dummyMethod2()[pri:3, instance:Practicing_TestNG.Groupings@79e2c065]">dummyMethod2</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>25/08/03 11:52:35</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groupings.failingDependentMethod()[pri:0, instance:Practicing_TestNG.Groupings@79e2c065]">failingDependentMethod</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>25/08/03 11:52:35</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groupings.group1()[pri:0, instance:Practicing_TestNG.Groupings@79e2c065]">group1</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>25/08/03 11:52:35</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groupings.group2()[pri:0, instance:Practicing_TestNG.Groupings@79e2c065]">group2</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>25/08/03 11:52:35</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groupings.group3()[pri:0, instance:Practicing_TestNG.Groupings@79e2c065]">group3</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>25/08/03 11:52:35</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groupings.group4()[pri:1, instance:Practicing_TestNG.Groupings@79e2c065]">group4</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>25/08/03 11:52:35</td>   <td>51</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groupings.passingDependentGroup()[pri:6, instance:Practicing_TestNG.Groupings@79e2c065]">passingDependentGroup</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>25/08/03 11:52:35</td>   <td>43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groupings.passingDependentMethod()[pri:4, instance:Practicing_TestNG.Groupings@79e2c065]">passingDependentMethod</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>25/08/03 11:52:35</td>   <td>46</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groupings.passingGroup()[pri:5, instance:Practicing_TestNG.Groupings@79e2c065]">passingGroup</td> 
   <td>main@617901222</td>   <td></td> </tr>
 </table>
